# empirical_logic

./: LICENSE  README.md  pyproject.toml
empirical_logic/: __init__.py
empirical_logic/_internal/: __init__.py  auxiliary.py  math_utils.py  norms.py
empirical_logic/core/: __init__.py  constants.py  exceptions.py  parameters.py
empirical_logic/operators/: __init__.py  logical_operators.py  validation_operators.py  validity_functions.py  validity_modulation.py
