[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "empirical-logic"
version = "1.0.1"
description = "A formal framework for computer-aided decision-making using empirical knowledge"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Jens Grotrian" }
]
license = "Empirical Logic Research License (ELRL) v1.0"

keywords = [
    "empirical logic",
    "soft computing",
    "decision-making",
    "rule-based reasoning",
    "approximate reasoning",
    "bio-inspired computing",
    "computational intelligence",
    "AI"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent"
]

dependencies = []

[project.urls]
Homepage = "https://github.com/jgr-el/empirical_logic"
Documentation = "https://github.com/jgr-el/empirical_logic#readme"
Source = "https://github.com/jgr-el/empirical_logic"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0"
]
